[package]
name = "ws2scan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
prost = "0.11"
tonic = "0.8"
tokio-tungstenite = "0.20"
futures-util = { version = "0.3", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
log = "0.4"
env_logger = "0.10"
chrono = "0.4.41"

socketcan = { version = "3.3.0", features = ["tokio"] }

lazy_static = "1.5.0"

[build-dependencies]
prost-build = "0.11"
